# Weather-app---IO-

./: CMakeLists.txt  MainWindow.py  gui.spec  loc.json  location.py  main.cpp  main.py  main_window.spec  readme.md  weather_data.json
src/: Location.cpp  Location.h  cities_dict.py  gui.py  gui2.py  gui_test.py  loc.json  location_request.py  main_window.py  settings_window.py  settings_window.ui  wapp.ui.autosave  weather_data.json  weather_data_request.py
src/GUI_/: gui.py  main_window.py
src/gui/: CMakeLists.txt  Weatherapp.qmlproject  gui.py  qmlmodules  wapp.ui
src/gui/content/: App.qml  Screen01.ui.qml  Settings_new.qml
src/gui/imports/: CMakeLists.txt
src/gui/imports/Weatherapp/: CMakeLists.txt  qmldir
src/gui/imports/Weatherapp/designer/: plugin.metainfo
src/gui/src/: import_qml_plugins.h
src/location/: LocationRequest.cpp  LocationRequest.h  loc.json  location_request.py  weather_data.json
src/weather api/: WeatherApiRequest.cpp
src/weather-api/: weather_data.json  weather_data_request.py
